# kylinos-v11-desktop-space-guard

./: .gitignore  AGENT.md  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.en.md  README.md  install.sh  resources.qrc
docs/: qt-ukui-layout.md
gui/: kylin-space-guard-gtk
packaging/: kylin-space-guard.desktop
src/: space_cleaner.cpp  space_helper.cpp
